<resources>
    <string name="app_name">MeetMe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_message">Welcome to the support page of the MeetMe app! We’re here to help you understand how to use the app, manage your account, and ensure a smooth experience for both students and lecturers. If you encounter any issues, our support team is ready to assist.</string>
    <string name="overview_message">MeetMe is a smart appointment scheduling app designed for students and lecturers to connect easily. Whether you need to book a consultation, check availability, or manage your upcoming meetings, MeetMe provides a seamless and user-friendly experience.</string>
    <string name="user_account_message">To use MeetMe, you must log in using your registered student or lecturer credentials. Each user has access to features based on their role:
        \n- Students can view lecturer availability, book appointments, cancel or reschedule meetings, and receive reminders.
        \n- Lecturers can set their available times, manage appointments, upload resources, and receive notifications.</string>
    <string name="app_use_message">Students: Select a lecturer, choose a module, pick a date and available timeslot, and confirm your booking.\nLecturers: Add availability slots, receive booking notifications, and view/manage upcoming appointments. \nBoth user types can access a profile page, review past appointments, and manage account settings.</string>
    <string name="data_collection_message">MeetMe collects only essential data such as your name, ID number, course, and email address. This information is used to personalize your experience and is never shared with third parties. All data is securely stored using Firebase services, ensuring your privacy and safety.</string>
    <string name="limitation_message">While MeetMe strives to offer a reliable and efficient scheduling service, we are not liable for missed appointments, incorrect bookings, or technical disruptions beyond our control. Users are responsible for confirming their bookings and attending scheduled sessions as agreed.</string>
    <string name="about_us_message">MeetMe was developed by a passionate group of students who understand the challenges of managing appointments between students and lecturers. Our goal is to make academic scheduling simple, fast, and reliable.</string>
    <string name="mission_message">Our mission is to enhance academic communication by providing a digital platform that simplifies appointment scheduling, saves time, and improves the learning experience for both students and educators.</string>
    <string name="offer_message">- Real-time scheduling between students and lecturers
        \n- Appointment reminders and notifications
        \n- Profile management for users
        \n- Booking history and analytics for admin and support staff
        \n- Easy-to-use, mobile-friendly interface</string>
    <string name="meet_the_team_message">We are a team of tech-savvy students committed to building meaningful software for academic environments. Each of us brings unique skills in development, design, and user experience to ensure MeetMe delivers value to every user.</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="our_mission">Our Mission</string>
    <string name="what_we_offer">What We Offer</string>
    <string name="meet_the_team">Meet the Team</string>
    <string name="home1">Home</string>
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="add_new_user">Add New User</string>
    <string name="id_number">ID Number</string>
    <string name="name1">Name</string>
    <string name="surname">Surname</string>
    <string name="surname1">Surname</string>
    <string name="select_the_course">Select The Course ▼</string>
    <string name="email">Email</string>
    <string name="add_user">Add User</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="hi_admin">Hi, Admin</string>
    <string name="add_new_student">Add New Student</string>
    <string name="add_new_lecturer">Add New Lecturer</string>
    <string name="manage_users">Manage Users</string>
    <string name="reports_and_analytics">Reports and Analytics</string>
    <string name="app_language">App Language:</string>
    <string name="english">English</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="reminder_time_before_appointment">Reminder Time Before Appointment 🔽</string>
    <string name="save_settings">Save Settings</string>
    <string name="bookings">Bookings</string>
    <string name="schedule_appointments">Schedule Appointments</string>
    <string name="select_the_lecturer">Select the lecturer:</string>
    <string name="load_available_times">Load Available Times</string>
    <string name="cancellation_reason">Cancellation Reason</string>
    <string name="personal_reasons">Personal reasons</string>
    <string name="not_feeling_well">Not feeling well</string>
    <string name="other">Other</string>
    <string name="confirm_cancellation">Confirm Cancellation</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="change_password">Change Password</string>
    <string name="select_module">Select Module</string>
    <string name="activity_1_docx">Activity 1.docx</string>
    <string name="topic_1_notes_pdf">Topic 1 Notes.pdf</string>
    <string name="activity_2_docx">Activity 2.docx</string>
    <string name="topic_3_notes_pdf">Topic 3 Notes.pdf</string>
    <string name="student_appointment_scheduler">Student Appointment Scheduler</string>
    <string name="get_started">GET STARTED</string>
    <string name="hi_lecturer">Hi, Lecturer</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="previous_appointments">Previous Appointments</string>
    <string name="no_previous_appointments_currently">No previous appointments currently.</string>
    <string name="lecturer_review">Lecturer Review</string>
    <string name="add_review">Add Review</string>
    <string name="log_in">Log in</string>
    <string name="hi_welcome">Hi, Welcome! 👋</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="user_id_number">User ID Number</string>
    <string name="manage_users1">Manage Users</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resources">Resources</string>
    <string name="upload_or_download_resources">Upload or Download Resources?</string>
    <string name="upload_resources">Upload Resources</string>
    <string name="download_resources">Download Resources</string>
    <string name="profile">Profile</string>
    <string name="id_number1">ID Number:</string>
    <string name="full_name">Full Name:</string>
    <string name="email_address">Email Address:</string>
    <string name="user_type">User Type:</string>
    <string name="reschedule_appointment">Reschedule Appointment</string>
    <string name="confirm_reschedule">Confirm Reschedule</string>
    <string name="schedule_availability">Schedule Availability</string>
    <string name="select_the_time">Select the time:</string>
    <string name="select_the_venue">Select the venue:</string>
    <string name="add_availability">Add Availability</string>
    <string name="app_settings">App Settings</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="profile1">Profile</string>
    <string name="settings">Settings</string>
    <string name="hi_student">Hi, Student</string>
    <string name="daily_quote">Daily Quote</string>
    <string name="empowering_your_academic_journey_schedule_connect_succeed">“Empowering Your Academic Journey Schedule, Connect, Succeed!”</string>
    <string name="list_of_schools">List of Schools</string>
    <string name="school_of_it">School of IT</string>
    <string name="school_of_commerce">School of Commerce</string>
    <string name="school_of_education">School of Education</string>
    <string name="school_of_law">School of Law</string>
    <string name="school_of_policing_and_law_enforcement">School of Policing and Law Enforcement</string>
    <string name="school_of_administration_and_management">School of Administration and Management</string>
    <string name="school_of_fashion">School of Fashion</string>
    <string name="appointments">Appointments</string>
    <string name="support1">Support</string>
    <string name="introduction">Introduction</string>
    <string name="app_overview">App Overview</string>
    <string name="user_accounts">User Accounts</string>
    <string name="use_of_the_app">Use of the App</string>
    <string name="data_collection_and_privacy">Data Collection And Privacy</string>
    <string name="limitation_of_liability">Limitation of Liability</string>
    <string name="upload_resources1">Upload Resources</string>
    <string name="select_course">Select Course</string>
    <string name="select_module1">Select Module</string>
    <string name="upload_file">Upload File</string>
    <string name="select_file">Select File</string>
    <string name="upload_resource">Upload Resource</string>
    <string name="appointment_info">Appointment Info</string>
    <string name="module">Module: ...</string>
    <string name="dtv">DTV: ...</string>
    <string name="lecturer">Lecturer: ...</string>
    <string name="filter_by_date_range">Filter by Date Range</string>
    <string name="analytics_and_reporting">Analytics and Reporting</string>
    <string name="filter_by_date_range1">Filter by Date Range</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="about_1">About</string>
    <string name="app_settings_1">App Settings</string>
    <string name="enter_the_module_name">Enter the Module Name</string>
    <string name="select_a_date">Select a Date</string>
    <string name="enter_other_reason">Enter other reason</string>
    <string name="download_resources_1">Download Resources</string>
    <string name="select_module_1">Select Module</string>
    <string name="search_text">Search text</string>
    <string name="no_upcoming_appointments_currently">No upcoming appointments currently.</string>
    <string name="enter_your_comment_here">Enter Your Comment Here...</string>
    <string name="enter_the_user_id_number">Enter the User ID Number</string>
    <string name="select_course_1">Select Course</string>
    <string name="select_module_2">Select Module</string>
    <string name="venue">Venue:</string>
    <string name="enter_other_venue">Enter other venue</string>
    <string name="select_a_date_1">Select a date:</string>
    <string name="bookings_1">Bookings</string>
    <string name="schedule_availability_1">Schedule Availability</string>
    <string name="lecturer_dashboard">Lecturer Dashboard</string>
    <string name="upload_resources_1">Upload Resources</string>
    <string name="settings_1">Settings</string>
    <string name="logout">Logout</string>
    <string name="student_dashboard">Student Dashboard</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="download_resources_2">Download Resources</string>
    <string name="lecturer_date_module_venue">Lecturer: %1$s\nDate: %2$s %3$s\nModule: %4$s\nVenue: %5$s</string>
    <string name="student_date_module_venue">Student: %1$s\nDate: %2$s %3$s\nModule: %4$s\nVenue: %5$s</string>
    <string name="cancel">Cancel</string>
    <string name="reschedule">Reschedule</string>
    <string name="add_review_1">Add Review</string>
    <string name="upcoming">Upcoming</string>
</resources>