<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/student_nav_graph"
    app:startDestination="@id/studentDashboardFragment">

    <fragment
        android:id="@+id/studentDashboardFragment"
        android:name="com.group1.meetme.StudentDashboardFragment"
        android:label="@string/student_dashboard"
        tools:layout="@layout/fragment_student_dashboard"/>

    <fragment
        android:id="@+id/studentBookingFragment"
        android:name="com.group1.meetme.bookAppointmentsFragment"
        android:label="@string/schedule_appointments"
        tools:layout="@layout/fragment_book_appointments"/>

    <fragment
        android:id="@+id/studentBookingsListFragment"
        android:name="com.group1.meetme.studentBookingsFragment"
        android:label="@string/bookings_1"
        tools:layout="@layout/fragment_student_bookings"/>

    <fragment
        android:id="@+id/studentDownloadFragment"
        android:name="com.group1.meetme.DownloadResourcesFragment"
        android:label="@string/download_resources_2"
        tools:layout="@layout/fragment_download_resources"/>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.group1.meetme.SettingsFragment"
        android:label="@string/settings_1"
        tools:layout="@layout/fragment_settings" />
</navigation>
