<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/rounded_background_ivory"
    android:elevation="2dp"
    android:orientation="horizontal"
    android:padding="12dp">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:src="@drawable/calendar_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/LecturerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecturer"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DateTimeVenueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dtv" />

        <TextView
            android:id="@+id/ModuleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module" />

        <TextView
            android:id="@+id/VenueName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venue" />
    </LinearLayout>
</LinearLayout>
